# rust-playground

./: Cargo.toml  README.md  rustup.rs.sh
avg/src/: lib.rs  main.rs
blogger/: Cargo.toml
blogger/src/: lib.rs  main.rs  post.rs  state.rs
bloody_song/: Cargo.toml
bloody_song/src/: main.rs
bricks/: Cargo.toml
bricks/src/: main.rs
company_directory/: Cargo.toml
company_directory/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
enums/src/: main.rs
fibonacci/src/: main.rs
file_handler/: Cargo.toml
file_handler/src/: main.rs
first_word/: Cargo.toml
first_word/src/: main.rs
forest/: Cargo.toml
forest/src/: lib.rs  main.rs  node.rs
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
gui/src/: button.rs  lib.rs  main.rs  screen.rs  select_box.rs
ip_address/: Cargo.toml
ip_address/src/: main.rs
lin_alg/: Cargo.toml
lin_alg/src/: main.rs  point.rs
maths/: Cargo.toml
maths/src/: lib.rs  main.rs  tests.rs
messenger/src/: lib.rs  limiter.rs  main.rs  messenger.rs
minigrep/: Cargo.toml
minigrep/src/: command.rs  lib.rs  main.rs  matcher.rs
pig_latin/src/: main.rs
references_and_borrowing/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: customer.rs  lib.rs  main.rs
slices/src/: main.rs
structs/src/: main.rs
tasker/: Cargo.toml
tasker/src/: main.rs
temp_conv/: Cargo.toml
temp_conv/src/: main.rs
variables/src/: main.rs
www/: Cargo.toml
www/src/: 200.html  404.html  lib.rs  main.rs
zoo/: Cargo.toml
zoo/src/: animal.rs  cage.rs  lib.rs  main.rs
(+11 files in other folders)
