[workspace]

members = [ "avg", "blogger",
    "bloody_song",
    "company_directory",
    "fibonacci" ,
    "file_handler",
    "first_word", 
    "forest",
    "guessing_game", "gui",
    "ip_address",
    "maths", 
    "messenger",
    "minigrep",
    "pig_latin",
    "restaurant", 
    "tasker",
    "temp_conv"
]

resolver = "2"
