[workspace]

members = [ "avg", "blogger",
    "bloody_song",
    "company_directory",
    "fibonacci" ,
    "file_handler",
    "first_word", 
    "forest",
    "guessing_game", "gui",
    "ip_address", "lin_alg",
    "maths", 
    "messenger",
    "minigrep",
    "pig_latin",
    "restaurant", 
    "tasker",
    "temp_conv"
, "www", "zoo"]

resolver = "2"
